--- a/Js-Page/Styles/about.css
+++ b/Js-Page/Styles/about.css
@@ -5,14 +5,13 @@ section {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 100vh;
 }
 .section-move  {
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    margin-top: 142px;
 }
 .about-box , .skills-box {
     border: 8px solid #000;
@@ -42,6 +41,7 @@ section {
     width: 71vw;
     flex-shrink: 0;
     overflow: hidden;
+    margin-top: 74px;
 }
 
 .explore-sec {
@@ -55,6 +55,7 @@ section {
     border-left: 2px solid black;
     border-right: 2px solid black;
     padding: 0px 15px;
+    margin: 74px 0;
 }
 
 .line {
@@ -62,6 +63,9 @@ section {
     height: 12px;
     flex-shrink: 0;
     background: url("../Images/Line.png");
+}
+.line2{
+    margin: 80px 0;
 }
 .explore-info {
     display: flex;
@@ -122,10 +126,13 @@ section {
         margin-left:30px;
     }
 }
-
+/*-------------------Skills-info----*/
 .skills-info {
     display: flex;
     justify-content: start;
+    flex-direction: column;
+    width: 60%; 
+    margin-top: 80px;
 }
 .skills-info > h5 {
     color: #000;
@@ -135,4 +142,59 @@ section {
     font-weight: 700;
     line-height: normal;
     letter-spacing: 5.561px;
+    
+}
+
+.Lang-using{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin: 75px 0;
+    row-gap: 55px;
+    
+}
+.Lang-using div{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-basis: 25%;    
+    
+}
+.Lang-using div > img{
+    width: 50px;
+    margin-bottom: 17px;
+}
+.Lang-using div > p{
+    color: #000;
+    font-family: Montserrat , Arial;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 3.249px;
+    
+}
+@media (max-width: 1018px) {
+    .Lang-using{
+        display: flex;
+        justify-content: center;
+        margin: 75px 0;
+        
+    }
+}
+@media (max-width: 910px) {
+    .Lang-using{
+        display: flex;
+        justify-content: center;
+        margin: 75px 0;
+        
+    }
+    .Lang-using div{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        flex-basis: 50%;    
+        
+    }
 }
