--- a/Js-Page/Styles/skills.css
+++ b/Js-Page/Styles/skills.css
@@ -1,7 +1,28 @@
 /*-------------------Skills-info----*/
+.skills-section {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: normal;
+}
+.skills-box {
+    border: 8px solid #000;
+    background: rgba(255, 255, 255, 0.00);
+    padding: 15px 60px;
+}
+.skills-box > h1 {
+    color: #000;
+    text-align: center;
+    font-family: Montserrat ,Arial;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 127.9%; /* 38.37px */
+    letter-spacing: 10.661px;
+}
 .skills-info {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     flex-direction: column;
     width: 60%; 
     margin-top: 80px;
@@ -54,6 +75,10 @@
         margin: 75px 0;
         
     }
+    .skills-info > h5 {
+       text-align: center;
+        
+    }
 }
 @media (max-width: 910px) {
     .Lang-using{
@@ -69,4 +94,5 @@
         flex-basis: 50%;    
         
     }
+    
 }
