Phone support and contact added

--- a/Js-Page/Styles/index.css
+++ b/Js-Page/Styles/index.css
@@ -2,10 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 body {
     background: radial-gradient(50% 50% at 50% 50%, rgba(26, 21, 21, 0.00) 0%, rgba(1, 1, 1, 0.16) 100%), #FFF;
@@ -98,5 +100,69 @@ body {
     height: 300px;
     border-radius: 50%;
     border: 3px solid white;
+}
+.main-bg{
+    background-image: url("../components//mobile-version/Images/bg-photo.jpg");
+    background-repeat: no-repeat;
+}
+@media (max-width:1000px) {
+    .Text-box {
+        align-items: center;   
+    }
+    .image-place > img {
+        width: 15rem;
+        height: 15rem;
+    }
+    .social-media {
+        flex-direction: row;
+        
+    }
+    .social-media > a{
+        padding: 6px 10px;
+        margin-right: 1rem;
+    }
+    .div-text  > #Hi-class{
+        font-size: 25px;
+        font-weight: 700;
+        margin-bottom: 54px;
+    }
+    .div-text > h1 {
+        font-size: 40px;
+        font-weight: 700;
+    }
+    .div-text #domain-class {
+        font-size: 20px;
+        font-weight: 800;
+    }
+}
+@media (max-width:600px) {
+    .Text-box {
+        align-items: center;   
+    }
+    .image-place > img {
+        width: 10rem;
+        height: 10rem;
+    }
+    .social-media {
+        flex-direction: row;
+        
+    }
+    .social-media > a{
+        padding: 4px 8px;
+        margin-right: 1rem;
+    }
+    .div-text  > #Hi-class{
+        font-size: 25px;
+        font-weight: 700;
+        margin-bottom: 54px;
+    }
+    .div-text > h1 {
+        font-size: 30px;
+        font-weight: 700;
+    }
+    .div-text #domain-class {
+        font-size: 20px;
+        font-weight: 800;
+    }
 }
 
