--- a/Js-Page/Styles/skills.css
+++ b/Js-Page/Styles/skills.css
@@ -8,13 +8,13 @@
 .skills-box {
     border: 8px solid #000;
     background: rgba(255, 255, 255, 0.00);
-    padding: 15px 60px;
+    padding: 0.938rem 3.75rem;
 }
 .skills-box > h1 {
     color: #000;
     text-align: center;
     font-family: Montserrat ,Arial;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-style: normal;
     font-weight: 700;
     line-height: 127.9%; /* 38.37px */
@@ -30,7 +30,7 @@
 .skills-info > h5 {
     color: #000;
     font-family: Montserrat , Arial;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -94,5 +94,39 @@
         flex-basis: 50%;    
         
     }
+    .skills-info > h5 {
+        letter-spacing: 0;
+        
+    }
     
+    .skills-box > h1 {
+        letter-spacing: 0;
+    }
+}
+@media (max-width: 300px) {
+    .Lang-using{
+        display: flex;
+        justify-content: center;
+        margin: 75px 0;
+        
+    }
+    .Lang-using div{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        flex-basis: 50%;    
+        
+    }
+    .skills-info > h5 {
+        font-size: 6vw;
+        letter-spacing: 0;
+        
+    }
+    .skills-box {
+        padding: 0.5rem 5vw;
+    }
+    .skills-box > h1 {
+        font-size: 6vw;
+        letter-spacing: 0;
+    }
 }
