--- a/Js-Page/Styles/work.css
+++ b/Js-Page/Styles/work.css
@@ -7,7 +7,7 @@
     color: #000;
     text-align: center;
     font-family: Montserrat ,Arial;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-style: normal;
     font-weight: 700;
     line-height: 127.9%; /* 38.37px */
@@ -18,13 +18,12 @@
     background-repeat: no-repeat;
 }
 
-@media (max-width:1000px) {
+@media (max-width:400px) {
     .portfolio-box {
-        border: 8px solid #000;
-        background: rgba(255, 255, 255, 0.00);
-        padding: 10px 30px;
+        padding: 0.5rem 2rem;
     }
     .portfolio-box > h1 {
-        font-size: 15px;
+        font-size: 0.938rem;
+        letter-spacing: 0;
     }
 }
